force-app/main/default/objects/Comercial_Code__mdt/Comercial_Code__mdt.object-meta.xml
<CustomObject>
    <label>Comercial Code</label>
    <pluralLabel>Comercial code</pluralLabel>
</CustomObject>