force-app/main/default/objects/Comercial_Code__mdt/fields/PAY_Comercial_Code__c.field-meta.xml
<CustomField>
    <fullName>PAY_Comercial_Code__c</fullName>
    <label>Comercial Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>20000 - Servicios de Comunicación, Construcción y Transporte</fullName>
                <default>true</default>
                <label>20000 - Servicios de Comunicación, Construcción y Transporte</label>
            </value>
            <value>
                <fullName>20002 - Servicios de Informática</fullName>
            </value>
            <value>
                <fullName>20005 - Servicios Empresariales, Profesionales, Honorarios y Técnicos varios</fullName>
            </value>
            <value>
                <fullName>20007 - Servicios Personales, Culturales y Recreativos</fullName>
            </value>
            <value>
                <fullName>20008 - Servicios de Información</fullName>
            </value>
            <value>
                <fullName>20024 - Jubilaciones, Montepíos, Ayudas Familiares, Herencias y Otras Donaciones</fullName>
            </value>
            <value>
                <fullName>20028 - Representaciones Diplomáticas, Misiones y otras Oficinas de Representación en el exterior</fullName>
            </value>
            <value>
                <fullName>20040 - Arrendamiento de Equipo de Transporte y Maquinaria</fullName>
            </value>
            <value>
                <fullName>20070 - Egresos por Turismo</fullName>
            </value>
            <value>
                <fullName>20075 - Egresos por Depósitos en moneda extranjera constituidos en Chile</fullName>
            </value>
            <value>
                <fullName>20080 - Egresos no contempladas en otros Códigos de Operaciones de Cambios</fullName>
            </value>
            <value>
                <fullName>20090 - Egresos para futuras Transferencias o para pagos directos en el exterior</fullName>
            </value>
            <value>
                <fullName>20500 - Coberturas de importaciones</fullName>
            </value>
            <value>
                <fullName>20700 - Primas de Seguros, Reaseguros, y otros egresos asociados</fullName>
            </value>
            <value>
                <fullName>20750 - Indemnizaciones por/sin Contratos de Seguros</fullName>
            </value>
            <value>
                <fullName>20830 - Regalías, Derechos de Autor y de Licencia por uso de marcas y patentes</fullName>
            </value>
            <value>
                <fullName>10080 - Ingresos no contempladas en otros Códigos de Operaciones de Cambios</fullName>
            </value>
            <value>
                <fullName>10096 - Ingresos de Entidades del M.C.F. por remesas o depósitos de documentos en moneda extranjera</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>