force-app/main/default/objects/Comercial_Code__mdt/fields/PAY_PCK_CommercialCode__c.field-meta.xml
<CustomField>
    <fullName>PAY_PCK_CommercialCode__c</fullName>
    <label>Commercial code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>20000</fullName>
                <default>true</default>
                <label>20000</label>
            </value>
            <value>
                <fullName>20002</fullName>
            </value>
            <value>
                <fullName>20005</fullName>
            </value>
            <value>
                <fullName>20007</fullName>
            </value>
            <value>
                <fullName>20008</fullName>
            </value>
            <value>
                <fullName>20024</fullName>
            </value>
            <value>
                <fullName>20028</fullName>
            </value>
            <value>
                <fullName>20040</fullName>
            </value>
            <value>
                <fullName>20070</fullName>
            </value>
            <value>
                <fullName>20075</fullName>
            </value>
            <value>
                <fullName>20080</fullName>
            </value>
            <value>
                <fullName>20090</fullName>
            </value>
            <value>
                <fullName>20500</fullName>
            </value>
            <value>
                <fullName>20700</fullName>
            </value>
            <value>
                <fullName>20750</fullName>
            </value>
            <value>
                <fullName>20830</fullName>
            </value>
            <value>
                <fullName>10080</fullName>
            </value>
            <value>
                <fullName>10096</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>