force-app/main/default/objects/Comercial_Code__mdt/fields/PAY_PCK_CommercialCodeText__c.field-meta.xml
<CustomField>
    <fullName>PAY_PCK_CommercialCodeText__c</fullName>
    <label>Commercial code text</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Communication, Construction and Transportation Services</fullName>
                <default>true</default>
                <label>20000 - Communication, Construction and Transportation Services</label>
            </value>
            <value>
                <fullName>IT Services</fullName>
                <label>20002 - IT Services</label>
            </value>
            <value>
                <fullName>Business, Professional, Fee-Based and Sundry Technical Services</fullName>
                <label>20005 - Business, Professional, Fee-Based and Sundry Technical Services</label>
            </value>
            <value>
                <fullName>Personal, Cultural and Recreational Services</fullName>
                <label>20007 - Personal, Cultural and Recreational Services</label>
            </value>
            <value>
                <fullName>Information Services</fullName>
                <label>20008 - Information Services</label>
            </value>
            <value>
                <fullName>Pensions, Dependent´s Pensions, Family Aids and Other Donations</fullName>
                <label>20024 - Pensions, Dependent´s Pensions, Family Aids and Other Donations</label>
            </value>
            <value>
                <fullName>Diplomatic Delegations, Missions, International Organizations and other Delegations abroad</fullName>
                <label>20028 - Diplomatic Delegations, Missions, International Organizations and other Delegations abroad</label>
            </value>
            <value>
                <fullName>Transportation Equipment and Machinery Rental</fullName>
                <label>20040 - Transportation Equipment and Machinery Rental</label>
            </value>
            <value>
                <fullName>Exits for Tourism</fullName>
                <label>20070 - Exits for Tourism</label>
            </value>
            <value>
                <fullName>Exits for Deposits in foreign currency established in Chile</fullName>
                <label>20075 - Exits for Deposits in foreign currency established in Chile</label>
            </value>
            <value>
                <fullName>Exits not contemplated in other International Exchange Operation Codes</fullName>
                <label>20080 - Exits not contemplated in other International Exchange Operation Codes</label>
            </value>
            <value>
                <fullName>Exits for future Transfers or for direct payments abroad</fullName>
                <label>20090 - Exits for future Transfers or for direct payments abroad</label>
            </value>
            <value>
                <fullName>Import hedges</fullName>
                <label>20500 - Import hedges</label>
            </value>
            <value>
                <fullName>Insurance and Reinsurance Premiums,  and other related Exits</fullName>
                <label>20700 - Insurance and Reinsurance Premiums,  and other related Exits</label>
            </value>
            <value>
                <fullName>Compensations for/without Insurance Contracts</fullName>
                <label>20750 - Compensations for/without Insurance Contracts</label>
            </value>
            <value>
                <fullName>Contributions, Borrowings and Donations to Corporation and other legal non-profit entities (Law Decree N° 1.183 of 1975)</fullName>
                <label>20830 - Contributions, Borrowings and Donations to Corporation and other legal non-profit entities (Law Decree N° 1.183 of 1975)</label>
            </value>
            <value>
                <fullName>Entries  not contemplated in other Exchange Operation Codes</fullName>
                <label>10080 - Entries  not contemplated in other Exchange Operation Codes</label>
            </value>
            <value>
                <fullName>Entries from M.C.F. Entities on remittances or deposits of notes in foreign currency</fullName>
                <label>10096 - Entries from M.C.F. Entities on remittances or deposits of notes in foreign currency</label>
            </value>
            <value>
                <fullName>10080 - Ingresos no contempladas en otros Códigos de Operaciones de Cambios</fullName>
                <isActive>false</isActive>
                <label>10080 - Ingresos no contempladas en otros Códigos de Operaciones de Cambios</label>
            </value>
            <value>
                <fullName>10096 - Ingresos de Entidades del M.C.F. por remesas o depósitos de documentos en moneda extranjera</fullName>
                <isActive>false</isActive>
                <label>10096 - Ingresos de Entidades del M.C.F. por remesas o depósitos de documentos en moneda extranjera</label>
            </value>
            <value>
                <fullName>20000 - Servicios de Comunicación, Construcción y Transporte</fullName>
                <isActive>false</isActive>
                <label>20000 - Servicios de Comunicación, Construcción y Transporte</label>
            </value>
            <value>
                <fullName>20002 - Servicios de Informática</fullName>
                <isActive>false</isActive>
                <label>20002 - Servicios de Informática</label>
            </value>
            <value>
                <fullName>20005 - Servicios Empresariales, Profesionales, Honorarios y Técnicos varios</fullName>
                <isActive>false</isActive>
                <label>20005 - Servicios Empresariales, Profesionales, Honorarios y Técnicos varios</label>
            </value>
            <value>
                <fullName>20007 - Servicios Personales, Culturales y Recreativos</fullName>
                <isActive>false</isActive>
                <label>20007 - Servicios Personales, Culturales y Recreativos</label>
            </value>
            <value>
                <fullName>20008 - Servicios de Información</fullName>
                <isActive>false</isActive>
                <label>20008 - Servicios de Información</label>
            </value>
            <value>
                <fullName>20024 - Jubilaciones, Montepíos, Ayudas Familiares, Herencias y Otras Donaciones</fullName>
                <isActive>false</isActive>
                <label>20024 - Jubilaciones, Montepíos, Ayudas Familiares, Herencias y Otras Donaciones</label>
            </value>
            <value>
                <fullName>20028 - Representaciones Diplomáticas, Misiones y otras Oficinas de Representación en el exterior</fullName>
                <isActive>false</isActive>
                <label>20028 - Representaciones Diplomáticas, Misiones y otras Oficinas de Representación en el exterior</label>
            </value>
            <value>
                <fullName>20040 - Arrendamiento de Equipo de Transporte y Maquinaria</fullName>
                <isActive>false</isActive>
                <label>20040 - Arrendamiento de Equipo de Transporte y Maquinaria</label>
            </value>
            <value>
                <fullName>20070 - Egresos por Turismo</fullName>
                <isActive>false</isActive>
                <label>20070 - Egresos por Turismo</label>
            </value>
            <value>
                <fullName>20075 - Egresos por Depósitos en moneda extranjera constituidos en Chile</fullName>
                <isActive>false</isActive>
                <label>20075 - Egresos por Depósitos en moneda extranjera constituidos en Chile</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>