force-app/main/default/objects/Comercial_Code__mdt/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>PAY_PCK_CommercialCode__c</columns>
    <columns>PAY_PCK_CommercialCodeText__c</columns>
    <filterScope>Everything</filterScope>
    <label>All_Fields</label>
    <language>en_US</language>
</ListView>